src/main/kotlin/com/example/falletterbackend/common/error/ExceptionFilter.kt
package com.example.falletterbackend.common.error

import com.example.falletterbackend.common.error.exception.FalletterException
import com.example.falletterbackend.falletter.exception.InternalServerErrorException
import com.fasterxml.jackson.databind.ObjectMapper
import jakarta.servlet.FilterChain
import jakarta.servlet.http.HttpServletRequest
import jakarta.servlet.http.HttpServletResponse
import org.slf4j.LoggerFactory
import org.springframework.http.MediaType
import org.springframework.stereotype.Component
import org.springframework.web.filter.OncePerRequestFilter
import java.io.IOException

@Component
class ExceptionFilter(
    private val objectMapper: ObjectMapper
) : OncePerRequestFilter() {
    private val log = LoggerFactory.getLogger(ExceptionFilter::class.java)

    @Throws(IOException::class)
    override fun doFilterInternal(
        request: HttpServletRequest,
        response: HttpServletResponse,
        filterChain: FilterChain
    ) {
        try {
            filterChain.doFilter(request, response)
        } catch (e: Exception) {
            log.error("Filter exception occurred: {}", e.message)
            when (e) {
                is FalletterException -> writeErrorCode(e, response)
                else -> writeErrorCode(InternalServerErrorException, response)
            }
        }
    }

    @Throws(IOException::class)
    private fun writeErrorCode(exception: FalletterException, response: HttpServletResponse) {
        val errorResponse = ErrorResponse.of(exception)

        response.contentType = MediaType.APPLICATION_JSON_VALUE
        response.status = errorResponse.status
        response.writer.write(objectMapper.writeValueAsString(errorResponse))
    }
}
